--- a/platform/i18n/src/locales/es/Buttons.json
+++ b/platform/i18n/src/locales/es/Buttons.json
@@ -8,6 +8,7 @@
   "Cancel": "Cancelar",
   "Circle": "Círculo",
   "Clear": "Limpiar",
+  "Cobb Angle": "Angulo de Cobb",
   "Coronal": "Coronal",
   "Crosshairs": "Punto de mira",
   "Download": "Descargar",
@@ -16,6 +17,7 @@
   "Flip H": "Voltear H",
   "Flip V": "Voltear V",
   "Freehand": "Mano alzada",
+  "Grid Layout": "Cuadrícula",
   "Invert": "Negativo",
   "Layout": "$t(Common:Layout)",
   "Length": "Longitud",
@@ -24,6 +26,7 @@
   "Manual": "Manual",
   "Measurements": "Medidas",
   "More": "$t(Common:More)",
+  "More Tools": "Más herramientas",
   "Next": "$t(Common:Next)",
   "Pan": "Mover",
   "Play": "$t(Common:Play)",
@@ -31,13 +34,22 @@
   "Probe": "Probar",
   "ROI Window": "Ventana ROI",
   "Rectangle": "Rectángulo",
+  "Reference Lines": "Lineas de referencia",
   "Reset": "$t(Common:Reset)",
   "Reset to defaults": "$t(Common:Reset) por defecto",
   "Rotate Right": "Girar ->",
   "Sagittal": "Sagital",
   "Save": "Guardar",
   "Stack Scroll": "Scroll",
+  "Stack Image Sync": "Pila imágenes sincronizadas",
   "Stop": "$t(Common:Stop)",
   "Themes": "Temas",
-  "Zoom": "Ampliar"
+  "Zoom": "Ampliar",
+  "W/L Presets": "Ventanas W/L",
+  "More Measure Tools": "Más herramientas de medidas",
+  "Soft Tissue": "Tejidos blandos",
+  "Lung": "Pulmón",
+  "Liver": "Hígado",
+  "Bone": "Hueso",
+  "Brain": "Cerebro"
 }
