modo mobil y extension con medidas custom

--- a/platform/i18n/src/locales/es/Header.json
+++ b/platform/i18n/src/locales/es/Header.json
@@ -4,6 +4,6 @@
   "INVESTIGATIONAL USE ONLY": "",
   "Options": "Opciones",
   "Preferences": "Preferencias",
-  "Study list": "Lista de estúdios",
+  "Study list": "Lista de estudios",
   "Logout": "Cerrar sesión"
 }
