--- a/platform/i18n/src/locales/es/StudyList.json
+++ b/platform/i18n/src/locales/es/StudyList.json
@@ -3,18 +3,18 @@
   "ClearFilters": "Limpiar filtros",
   "Description": "Descripción",
   "Empty": "vacío",
-  "Filter list to 100 studies or less to enable sorting": "Filtre la lista a 100 estúdios o menos para habilitar la clasificación",
+  "Filter list to 100 studies or less to enable sorting": "Filtre la lista a 100 estudios o menos para habilitar la clasificación",
   "Instances": "Instancias",
   "Modality": "Modalidad",
   "MRN": "Identificación",
-  "No studies available": "No hay estúdios disponibles",
-  "Number of studies": "Número de estúdios",
+  "No studies available": "No hay estudios disponibles",
+  "Number of studies": "Número de estudios",
   "PatientName": "Nombre paciente",
   "Previous": "< Anterior",
   "Page": "Página",
   "Next": "Siguiente >",
   "Results per page": "Resultados por página",
-  "StudyDate": "Fecha del estúdio",
-  "StudyList": "Lista de Estúdios",
+  "StudyDate": "Fecha del estudio",
+  "StudyList": "Lista de Estudios",
   "Upload": "Cargar"
 }
